// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <HomeScreen/> should show the component successfully 1`] = `
<div>
  <h1>
    Home Screen
  </h1>
  <hr />
  <pre />
</div>
`;

exports[`Test in <HomeScreen/> should show the user in the component 1`] = `
<div>
  <h1>
    Home Screen
  </h1>
  <hr />
  <pre>
    {
  "id": 1,
  "name": "Roger",
  "email": "roger@mail.com"
}
  </pre>
</div>
`;
